--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
 Options -Indexes 
 ErrorDocument 404 /404.php
 
+RedirectMatch 404 /\.git
+RedirectMatch 404 /\.gitignore
+
 <IfModule mod_rewrite.c>
   Options +FollowSymLinks
   RewriteEngine On
